[gd_scene load_steps=12 format=3 uid="uid://jjvhsqdgkdrn"]

[ext_resource type="Script" path="res://entities/dummy/dummy.gd" id="1_h1qw8"]
[ext_resource type="PackedScene" uid="uid://jik04cg2nmq5" path="res://components/commands/hurtbox/hurtbox_component.tscn" id="1_qsfqk"]
[ext_resource type="Script" path="res://resources/damage_data.gd" id="2_iombb"]
[ext_resource type="Script" path="res://resources/collision_data.gd" id="4_m2e5f"]
[ext_resource type="PackedScene" uid="uid://ctexjtf10m8x2" path="res://components/commands/hitbox/hitbox_component.tscn" id="5_yv4rs"]
[ext_resource type="PackedScene" uid="uid://b23qvw2iygdut" path="res://components/commands/health/health_component.tscn" id="7_rm0ve"]
[ext_resource type="PackedScene" uid="uid://d0ajtpnsu2fua" path="res://attributes/general/HealthAttribute.tscn" id="8_5w88t"]

[sub_resource type="Resource" id="Resource_idho0"]
script = ExtResource("2_iombb")
amount = 15
type = 3

[sub_resource type="Resource" id="Resource_e2m67"]
script = ExtResource("4_m2e5f")
damages = Array[ExtResource("2_iombb")]([SubResource("Resource_idho0")])
effects = Array[Resource("res://resources/effect_data.gd")]([])
knockbacks = Array[Resource("res://resources/knockback_data.gd")]([])

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f7wua"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_souaw"]

[node name="Dummy" type="CharacterBody2D" node_paths=PackedStringArray("health", "hitbox", "hurtbox")]
script = ExtResource("1_h1qw8")
health = NodePath("HealthComponent")
hitbox = NodePath("HitboxComponent")
hurtbox = NodePath("HurtboxComponent")
id = "Dummy"
faction = 4

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
color = Color(1, 0, 0, 1)

[node name="HurtboxComponent" parent="." instance=ExtResource("1_qsfqk")]
collision = SubResource("Resource_e2m67")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
shape = SubResource("RectangleShape2D_f7wua")

[node name="HitboxComponent" parent="." instance=ExtResource("5_yv4rs")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("RectangleShape2D_souaw")

[node name="HealthComponent" parent="." node_paths=PackedStringArray("max_health") instance=ExtResource("7_rm0ve")]
invulnerable = true
max_health = NodePath("../HealthAttribute")

[node name="HealthAttribute" parent="." instance=ExtResource("8_5w88t")]
raw_value = 50.0

[connection signal="hit_by_damage" from="HitboxComponent" to="." method="_on_hitbox_component_hit_by_damage"]
